syntax = "proto3";
option go_package = "github.com/falmar/otel-trivago/pkg/proto/v1/roompb";

package roompb;

enum CleanStatus {
  CLEAN = 0;
  DIRTY = 1;
}

message Room {
  string id = 1;
  int64 capacity = 2;
  CleanStatus clean_status = 3;
}

service RoomService {
  rpc ListRooms(ListRoomsRequest) returns (ListRoomsResponse);
}

message ListRoomsRequest {
  int64 capacity = 1;
  int64 limit = 2;
  int64 offset = 3;
}
message ListRoomsResponse {
  repeated Room rooms = 1;
  int64 total = 2;
}
